<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thuongdh.qltc.OutCustom">
   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:orientation="vertical"
       android:background="#ffcc99">
       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:background="#33cc33">
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="match_parent"
               android:id="@+id/tvCustomTitle"
               android:textSize="20dp"
               android:textStyle="bold|italic"
               android:text="@string/money_in_day"
               android:textAlignment="center"
               android:gravity="center"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:orientation="horizontal">
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="0.5">
           </LinearLayout>
           <Button
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="2"
               android:text="@string/Food"
               android:id="@+id/btnCustomFood"
               android:textAllCaps="false"/>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1">
           </LinearLayout>
           <Button
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="2"
               android:text="@string/Shopping"
               android:id="@+id/btnCustomShopping"
               android:textAllCaps="false"/>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1">
           </LinearLayout>
           <Button
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="2"
               android:text="@string/other"
               android:textAllCaps="false"
               android:id="@+id/btnCustomOther"/>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="0.5"></LinearLayout>
       </LinearLayout>
       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:layout_weight="1">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:id="@+id/tvCustomDate"
               android:text="@string/Date"
               android:textStyle="italic"
               android:textSize="20dp"
               android:layout_marginLeft="20dp"
               android:gravity="center"/>
           <EditText
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:id="@+id/edtCustomDate"
               android:textSize="20dp"
               android:inputType="date"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:layout_weight="1">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:text="@string/wallet"
               android:id="@+id/tvCustomWallet"
               android:textSize="20dp"
               android:textStyle="italic"
               android:layout_marginLeft="20dp"
               android:textAlignment="center"
               android:gravity="center"/>
           <Spinner
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:id="@+id/spCustomWallet">
           </Spinner>
       </LinearLayout>
       <TextView
           android:layout_width="fill_parent"
           android:layout_height="5dp"
           android:background="#33cc33"/>
       <FrameLayout
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:id="@+id/frment"
           android:layout_weight="5">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:textSize="20dp"
               android:textStyle="italic"
               android:textAlignment="center"
               android:gravity="center"
               android:id="@+id/tvCustomEmpty"
               android:text="@string/Empty"/>
       </FrameLayout>
       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:orientation="horizontal">
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1">
           </LinearLayout>
           <Button
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="2"
               android:text="@string/Finish"
               android:id="@+id/btnCustomFinish"/>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1">
           </LinearLayout>
           <Button
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="2"
               android:text="@string/Cancel"
               android:id="@+id/btnCustomCancel"/>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1">
           </LinearLayout>
       </LinearLayout>
       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:layout_weight="0.5"></LinearLayout>
   </LinearLayout>
</android.support.constraint.ConstraintLayout>
