<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thuongdh.qltc.addNewAction">
    <LinearLayout
        android:layout_width="fill_parent"
        android:background="#edc45c"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#55ea5c">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/frtvNewSpending"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="30dp"
                android:textStyle="italic|bold"
                android:text="@string/new_Spending"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textStyle="italic"
                android:textSize="20dp"
                android:textAlignment="center"
                android:id="@+id/frtvName"
                android:text="@string/Action_name"
                android:layout_marginLeft="30dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textStyle="italic"
                android:id="@+id/fredtName"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1">
            </LinearLayout>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/add"
                android:id="@+id/frbtnAdd"
                android:textSize="20dp"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1">
            </LinearLayout>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/frbtnCancel"
                android:textSize="20dp"
                android:text="@string/Cancel"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"></LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
