<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thuongdh.qltc.OutMoneyOne">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#ffcc99">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="#33cc33"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imbtnBackOutOne"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/Insert_detail_info"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="#00ff99"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_height="match_parent"
                android:text="@string/TypeMoney"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="italic"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/tvNameOutOne"
                android:textSize="20dp"
                android:textStyle="italic"
                android:textAlignment="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:textAlignment="center"
                android:textSize="20dp"
                android:text="@string/Chose_wallet"
                android:textStyle="italic"
                android:gravity="center"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:id="@+id/spViTienOutOne"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:textAlignment="center"
                android:textSize="20dp"
                android:text="@string/Money"
                android:textStyle="italic"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:id="@+id/edtSoTienOutOne"
                android:inputType="number"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:textStyle="italic"
                android:textSize="20dp"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/Date"
                android:id="@+id/tvDateOutMoney"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="20dp"
                android:textAlignment="center"
                android:inputType="date"
                android:layout_marginLeft="10dp"
                android:id="@+id/edtDateOutMoney"/>
        </LinearLayout>
       <!-- <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:textAlignment="center"
                android:textSize="20dp"
                android:text="Ngày chi: "
                android:textStyle="italic"
                android:gravity="center"/>
            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateNgayOutOne"
                android:textAlignment="center"
                android:layout_gravity="center">
            </DatePicker>
        </LinearLayout>-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </LinearLayout>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textAlignment="center"
                android:textSize="15dp"
                android:text="@string/add"
                android:id="@+id/btnAddOutOne"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">
            </LinearLayout>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/Cancel"
                android:textSize="15dp"
                android:textAlignment="center"
                android:id="@+id/btnCancelOutOne"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
